--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <img src="assets/img/team/tm2.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Jennifer Olorunda</h4>
-                <span>Chief Financial Officer</span>
+                <span>Managing Partner</span>
                 <p>
                   Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
                 </p>
@@ -420,7 +420,7 @@
             <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
 
               <div class="tab-pane fade active show" id="features-tab-1">
-                <img src="assets/img/img2.jpg" alt="" class="img-fluid">
+                <img src="assets/img/img13.jpg" alt="" class="img-fluid">
               </div><!-- End Tab Content Item -->
 
               <div class="tab-pane fade" id="features-tab-2">
@@ -428,7 +428,7 @@
               </div><!-- End Tab Content Item -->
 
               <div class="tab-pane fade" id="features-tab-3">
-                <img src="assets/img/img13.jpg" alt="" class="img-fluid">
+                <img src="assets/img/img2.jpg" alt="" class="img-fluid">
               </div><!-- End Tab Content Item -->
             </div>
 
