--- a/team.html
+++ b/team.html
@@ -114,7 +114,7 @@
               <img src="assets/img/team/tm2.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Jennifer Olorunda</h4>
-                <span>Chief Financial Officer</span>
+                <span>Managing Partner</span>
                 <p>
                   Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
                 </p>
@@ -130,7 +130,7 @@
               <img src="assets/img/team/tm3.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Oparinde Babatunde</h4>
-                <span>Chief Operations Officer</span>
+                <span>Managing Partner</span>
                 <p>
                   Oparinde Babatunde is a results-driven operations leader with a passion for optimizing processes and driving efficiency. As COO, he oversees the day-to-day operations of Team Capital, ensuring seamless execution of the firm’s strategies. His focus on mindfulness and emotional intelligence fosters a collaborative and productive working environment.
                 </p>
