--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <h4>Est 2023</h4>
                   <h3>Our Story</h3>
                   <p>Team Capital Investment Ltd was established by a group of forward-thinking professionals who recognized the immense potential of Africa’s small and medium-sized enterprises (SMEs) and the largely untapped informal sector. Despite being the backbone of the continent’s economy, these businesses often face systemic challenges, including limited access to capital, inefficient operational structures, and a lack of strategic support.</p>
-                  <p>Guided by a deep commitment to reshaping Africa’s entrepreneurial landscape, Unity Oseghe (Chairman) and Tasie Raphael (Managing Partner) co-founded Team Capital as more than just a venture capital firm—it is a movement to revolutionize funding and business support in Africa. They envisioned an investment firm that not only injects capital into promising businesses but also actively nurtures their growth through strategic mentorship, operational guidance, and ecosystem development.
+                  <p>Guided by a deep commitment to reshaping Africa’s entrepreneurial landscape,Tasie Raphael (Managing Partner/Founder) and Oparinde Babatunde (Managing Partner/Founder) co-founded Team Capital as more than just a venture capital firm—it is a movement to revolutionize funding and business support in Africa. They envisioned an investment firm that not only injects capital into promising businesses but also actively nurtures their growth through strategic mentorship, operational guidance, and ecosystem development.
                   </p>
                 </div>
               </div>
@@ -226,27 +226,25 @@
               <img src="assets/img/team/tm4.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Tasie Raphael</h4>
-                <span>Managing Partner</span>
+                <span>Managing Partner/Founder</span>
                 <p>
                   Tasie Raphael is a seasoned business developer and sales professional with over a decade of experience in the financial services industry. His career spans esteemed institutions such as Fidelity Bank, Sterling Bank, Keystone Bank, and Wema Bank, where he honed his skills in customer relationship management, SME growth strategies, and risk asset generation.
                 </p>
               </div>
             </div>
           </div><!-- End Team Member -->
-
           <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/tm2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/tm3.jpg" class="img-fluid" alt="">
               <div class="member-content">
-                <h4>Jennifer Olorunda</h4>
-                <span>Managing Partner</span>
+                <h4>Oparinde Babatunde</h4>
+                <span>Managing Partner/Founder</span>
                 <p>
-                  Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
+                  Oparinde Babatunde is a results-driven operations leader with a passion for optimizing processes and driving efficiency. As COO, he oversees the day-to-day operations of Team Capital, ensuring seamless execution of the firm’s strategies. His focus on mindfulness and emotional intelligence fosters a collaborative and productive working environment.
                 </p>
               </div>
             </div>
           </div><!-- End Team Member -->
-
         </div>
 
       </div>
