--- a/team.html
+++ b/team.html
@@ -101,43 +101,37 @@
               <img src="assets/img/team/tm4.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Tasie Raphael</h4>
-                <span>Managing Partner</span>
+                <span>Managing Partner/Founder</span>
                 <p>
                   Tasie Raphael is a seasoned business developer and sales professional with over a decade of experience in the financial services industry. His career spans esteemed institutions such as Fidelity Bank, Sterling Bank, Keystone Bank, and Wema Bank, where he honed his skills in customer relationship management, SME growth strategies, and risk asset generation.
                 </p>
               </div>
             </div>
           </div><!-- End Team Member -->
-
-          <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="member">
-              <img src="assets/img/team/tm2.jpg" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>Jennifer Olorunda</h4>
-                <span>Managing Partner</span>
-                <p>
-                  Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
-                </p>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-        </div>
-        <div class="row">
-
           <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/team/tm3.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Oparinde Babatunde</h4>
-                <span>Managing Partner</span>
+                <span>Managing Partner/Founder</span>
                 <p>
                   Oparinde Babatunde is a results-driven operations leader with a passion for optimizing processes and driving efficiency. As COO, he oversees the day-to-day operations of Team Capital, ensuring seamless execution of the firm’s strategies. His focus on mindfulness and emotional intelligence fosters a collaborative and productive working environment.
                 </p>
               </div>
             </div>
           </div><!-- End Team Member -->
-
+          <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
+              <img src="assets/img/team/tm2.jpg" class="img-fluid" alt="">
+              <div class="member-content">
+                <h4>Jennifer Olorunda</h4>
+                <span>Managing Partner/CFO</span>
+                <p>
+                  Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
+                </p>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
           <div class="col-lg-4 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/team/tm5.jpg" class="img-fluid" alt="">
@@ -150,7 +144,6 @@
             </div>
           </div><!-- End Team Member -->
         </div>
-
       </div>
 
     </section><!-- /Team Section -->
