--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/about-page-title-bg.jpg);">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/img37.jpg);">
       <div class="container">
         <h1>About</h1>
         <nav class="breadcrumbs">
@@ -75,7 +75,7 @@
 
       <div class="row position-relative">
 
-        <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
+        <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/img42.jpg"></div>
 
         <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
           <h2 class="inner-title">About Team Capital Investment Ltd.</h2>
@@ -97,7 +97,7 @@
       <div class="container">
 
         <div class="row justify-content-around gy-4">
-          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/img11.jpg" alt=""></div>
+          <div class="features-image col-lg-6" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/img43.jpg" alt=""></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <h3>Empowering SMEs to Build Resilient Economies and Drive Sustainable Growth Across Africa</h3>
@@ -146,7 +146,7 @@
   <div class="row g-0">
 
     <div class="col-xl-5 img-bg" data-aos="fade-up" data-aos-delay="100">
-      <img src="assets/img/why-us-bg.jpg" alt="">
+      <img src="assets/img/img34.jpg" alt="">
     </div>
 
     <div class="col-xl-7 slides position-relative" data-aos="fade-up" data-aos-delay="200">
@@ -351,7 +351,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="steps-item">
               <div class="steps-image">
-                <img src="assets/img/img17 2.jpg" alt="Step 1" class="img-fluid" loading="lazy">
+                <img src="assets/img/img36.jpg" alt="Step 1" class="img-fluid" loading="lazy">
               </div>
               <div class="steps-content">
                 <div class="steps-number">01</div>
@@ -380,7 +380,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="steps-item">
               <div class="steps-image">
-                <img src="assets/img/img18.jpg" alt="Step 2" class="img-fluid" loading="lazy">
+                <img src="assets/img/img46.webp" alt="Step 2" class="img-fluid" loading="lazy">
               </div>
               <div class="steps-content">
                 <div class="steps-number">02</div>
@@ -489,7 +489,7 @@
                 <div class="steps-features">
                   <div class="feature-item">
                     <i class="bi bi-check-circle"></i>
-                    <span>Ticket sizes ranging from ₦5,000,000 to X.</span>
+                    <span>Ticket sizes ranging from $5,000,000 to X.</span>
                   </div>
                   <div class="feature-item">
                     <i class="bi bi-check-circle"></i>
