--- a/team.html
+++ b/team.html
@@ -113,7 +113,7 @@
               <img src="assets/img/team/tm3.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Oparinde Babatunde</h4>
-                <span>Managing Partner/Founder</span>
+                <span>Managing Partner/co-Founder</span>
                 <p>
                   Oparinde Babatunde is a results-driven operations leader with a passion for optimizing processes and driving efficiency. As COO, he oversees the day-to-day operations of Team Capital, ensuring seamless execution of the firm’s strategies. His focus on mindfulness and emotional intelligence fosters a collaborative and productive working environment.
                 </p>
