--- a/team.html
+++ b/team.html
@@ -115,7 +115,7 @@
                 <h4>Oparinde Babatunde</h4>
                 <span>Managing Partner/co-Founder</span>
                 <p>
-                  Oparinde Babatunde is a results-driven operations leader with a passion for optimizing processes and driving efficiency. As COO, he oversees the day-to-day operations of Team Capital, ensuring seamless execution of the firm’s strategies. His focus on mindfulness and emotional intelligence fosters a collaborative and productive working environment.
+                  Oparinde Babatunde is a results-driven operations leader with a passion for optimizing processes and driving efficiency. As Managing Parner/Co-Founder, he oversees the day-to-day operations of Team Capital, ensuring seamless execution of the firm’s strategies. His focus on mindfulness and emotional intelligence fosters a collaborative and productive working environment.
                 </p>
               </div>
             </div>
@@ -127,7 +127,7 @@
                 <h4>Jennifer Olorunda</h4>
                 <span>Managing Partner/CFO</span>
                 <p>
-                  Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
+                  Jennifer Olorunda brings extensive expertise in financial management and strategic planning to Team Capital. As Managing Partner/CFO, she oversees the firm’s financial operations, ensuring sound investment decisions and sustainable growth. Her analytical mindset and commitment to excellence play a critical role in maximizing returns for investors and portfolio companies alike.
                 </p>
               </div>
             </div>
