--- a/about.html
+++ b/about.html
@@ -489,7 +489,7 @@
                 <div class="steps-features">
                   <div class="feature-item">
                     <i class="bi bi-check-circle"></i>
-                    <span>Ticket sizes ranging from $3,272 to X.</span>
+                    <span>Ticket sizes ranging from $3,500 to X.</span>
                   </div>
                   <div class="feature-item">
                     <i class="bi bi-check-circle"></i>
@@ -676,7 +676,7 @@
               <div class="faq-item">
                 <h3>How much funding do you provide?</h3>
                 <div class="faq-content">
-                  <p>Our ticket sizes typically range from ₦5,000,000 to X, depending on the business’s needs, growth stage, and sector. We offer flexible financing models, including equity investments, convertible debt, and revenue-based financing.</p>
+                  <p>Our ticket sizes typically range from $3500 to X, depending on the business’s needs, growth stage, and sector. We offer flexible financing models, including equity investments, convertible debt, and revenue-based financing.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
