--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <h4>Est 2023</h4>
                   <h3>Our Story</h3>
                   <p>Team Capital Investment Ltd was established by a group of forward-thinking professionals who recognized the immense potential of Africa’s small and medium-sized enterprises (SMEs) and the largely untapped informal sector. Despite being the backbone of the continent’s economy, these businesses often face systemic challenges, including limited access to capital, inefficient operational structures, and a lack of strategic support.</p>
-                  <p>Guided by a deep commitment to reshaping Africa’s entrepreneurial landscape,Tasie Raphael (Managing Partner/Founder) and Oparinde Babatunde (Managing Partner/Founder) co-founded Team Capital as more than just a venture capital firm—it is a movement to revolutionize funding and business support in Africa. They envisioned an investment firm that not only injects capital into promising businesses but also actively nurtures their growth through strategic mentorship, operational guidance, and ecosystem development.
+                  <p>Guided by a deep commitment to reshaping Africa’s entrepreneurial landscape,Tasie Raphael (Managing Partner/Founder) and Oparinde Babatunde (Managing Partner/Co-Founder) co-founded Team Capital as more than just a venture capital firm—it is a movement to revolutionize funding and business support in Africa. They envisioned an investment firm that not only injects capital into promising businesses but also actively nurtures their growth through strategic mentorship, operational guidance, and ecosystem development.
                   </p>
                 </div>
               </div>
@@ -467,7 +467,7 @@
               <div class="faq-item">
                 <h3>How much funding do you provide?</h3>
                 <div class="faq-content">
-                  <p>Our ticket sizes typically range from ₦5,000,000 to X, depending on the business’s needs, growth stage, and sector. We offer flexible financing models, including equity investments, convertible debt, and revenue-based financing.</p>
+                  <p>Our ticket sizes typically range from $3500 to X, depending on the business’s needs, growth stage, and sector. We offer flexible financing models, including equity investments, convertible debt, and revenue-based financing.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
